@@ -23,6 +23,9 @@
 	<LI>HTMLDOC now supports the BORDERCOLOR attribute for
 	tables, a MSIE extension.
 
+	<LI>The "strict HTML" mode now reports unresolved local
+	links.
+
 	<H3 _HD_OMIT_TOC>Changes</H3>
 
 	<LI>The command-line now allows --fontsize values from 4
